--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  color:darkseagreen
 }
 
-.App-link {
-  color: #61dafb;
+.coin-icon{
+  max-width: 35px;
+  max-height: 45px;
+  padding-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+  text-align: center;
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: aliceblue;
+}
+
+.card:hover{
+  background-color:rgb(110, 171, 173);
+}
+
+.headerStyle{
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.linkStyle{
+  font-size: 12px;
+  text-decoration: none;
+  margin-left: 10px;
+  background-color: aliceblue;
+  padding: 5px 5px 5px 5px;
+  border-radius: 5px;
+}
+
+input{
+  width: 100%;
+  margin-bottom: 20px;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  border-radius: 5px;
+  color: dimgray;
+  text-align: center;
+  border: transparent;
+}
+
+input:focus{
+  outline: none;
 }
